--- a/dl.cfg
+++ b/dl.cfg
@@ -1,4 +1,4 @@
 [AWS]
-AWS_ACCESS_KEY_ID=AKIAT3WYWHLZ7QAEZVNW
-AWS_SECRET_ACCESS_KEY=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
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
 S3=udacity-de-sparkify-data-lake
